ft(booking):user book an accomodation create booking model create accomodation model create room model [(finishes) #175636867]
